refactor(#130): add the ARC ingest endpoint support.

--- a/api/openapi/paths/non_admin/request-bodies.yaml
+++ b/api/openapi/paths/non_admin/request-bodies.yaml
@@ -70,3 +70,24 @@ components:
             required:
               - service
               - query
+
+    ArcIngestBody:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              txid:
+                type: string
+                description: 'Transaction ID in hexadecimal format'
+              merklePath:
+                type: string
+                description: 'Merkle path in hexadecimal format'
+              blockHeight:
+                type: integer
+                format: uint32
+                description: 'Block height where the transaction was included'
+            required:
+              - txid
+              - merklePath
+              - blockHeight
